Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Tue Jul 7 17:44:13 2015 +0200

    MiniReaderEventInfo.h MiniReaderPrimaryVertex.h MiniReaderEventInfo.cxx
    MiniReaderPrimaryVertex.cxx: Added getters for variables needed in the
    MiniReaderJets class.
    
    MiniReaderEventInfo.h, MiniReaderEventInfo.cxx:
    +  float GetAvgIntPerCross() const;
    
     MiniReaderPrimaryVertex.h, MiniReaderPrimaryVertex.cxx:
    +  int GetPvtxN() const;

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Tue Jul 7 17:16:51 2015 +0200

    MiniReaderJets.h, MiniReaderJet.cxx: Added function to perform JVT and Jet
    efficiency plots.
    
    MiniReaderJets.h:
    Added PassToJets tuple to pass to FillJetPlot() function variables from other
    classes.
    Added fillNjetPt() fillNjetPtJVT() template functions to perform the JVT and
    Jet efficiency plots.
    
    MiniReaderJets.cxx:
    Added few histograms to perfrom JVT and Jet efficiency studies using the new
    naming sistem that supports different regions (control and signal regions).

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Wed Jul 1 16:37:39 2015 +0200

    update_changelog.sh: Added an option to automatially use the previous commit message.

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Wed Jul 1 16:32:01 2015 +0200

    update_changelog.sh: Adding small handy script to automatically update the ChangeLog.

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Wed Jul 1 16:21:00 2015 +0200

     MiniReaderAlg.h, MiniReaderJets.h, MiniReaderAlg.cxx, MiniReaderJet.cxx: Switch
     to the new histogram interface.
    
    MiniReaderJets.cxx:
    Testing the HistoBaseClass on jets, added InitJetHisto() and FillJetHisto()
    functions in the MiniReaderJets class and calling them in the MiniReaderAlg.
    
    MiniReaderAlg.cxx:
    Added a call to the new functions in the MiniReaderJets class.
    
    MiniReaderAlg.h: