@@ -1,4 +1,13 @@
 Author: Gabriele Bertoli <gbertoli@cern.ch>
+Date:   Tue Jul 7 18:00:50 2015 +0200
+
+    MiniReaderAlg.h, MiniReaderAlg.cxx: Moving objects tuples to appropriate
+    classes.
+    
+    Moved the tuples containing the objects belonging to different classes to pass
+    to the histo filling functions in the header of the appropriate class.
+
+Author: Gabriele Bertoli <gbertoli@cern.ch>
 Date:   Tue Jul 7 17:44:13 2015 +0200
 
     MiniReaderEventInfo.h MiniReaderPrimaryVertex.h MiniReaderEventInfo.cxx
